--- a/src/pages/builder/index.astro
+++ b/src/pages/builder/index.astro
@@ -1,17 +1,17 @@
 ---
-import BuilderApp from '../../components/builder/BuilderApp';
-import '../../styles/global.css';
+import BuilderApp from "../../components/builder/BuilderApp";
+import "../../styles/global.css";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page Builder</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  </head>
-  <body>
-    <BuilderApp client:only="react" />
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Landing Page Builder</title>
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    </head>
+    <body>
+        <BuilderApp client:only="react" />
+    </body>
 </html>
