--- a/src/components/sections/custom/ServiceAreaMap.astro
+++ b/src/components/sections/custom/ServiceAreaMap.astro
@@ -45,6 +45,7 @@ const stats = [
           <img 
             src={displayImage} 
             alt="Service Area Map" 
+            loading="lazy"
             class="absolute inset-0 w-full h-full object-cover opacity-50 group-hover:opacity-60 transition-opacity grayscale hover:grayscale-0 duration-500"
           />
           
