--- a/src/components/sections/custom/TransformationStory.astro
+++ b/src/components/sections/custom/TransformationStory.astro
@@ -67,6 +67,7 @@ const { industry, image } = Astro.props;
             <img 
               src={image} 
               alt="Transformation journey" 
+              loading="lazy"
               class="absolute inset-0 w-full h-full object-cover"
             />
           ) : (
